# sift-rust

./: .gitignore  README.md
sift-rust/src/: lib.rs
sift-rust/src/numerical/: downsample.rs  fast_expn.rs  mod.rs  smooth.rs  upsample.rs
vlfeat/rust/vlfeat-sift/: Cargo.toml  test_against_c.sh
vlfeat/rust/vlfeat-sift/examples/: compare_fast_expn.rs
vlfeat/rust/vlfeat-sift/src/: lib.rs
vlfeat/vl/: sift.c
